--- a/NutriLift/Pages/Shared/_Layout.cshtml
+++ b/NutriLift/Pages/Shared/_Layout.cshtml
@@ -18,12 +18,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UserDetails/Index">Login</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
